Added form select styling and Operating System options. Need to change OS options for the different Device options.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         <option value="tablet">Tablet</option>
         <option value="smartphone">Smartphone</option>
       </select>
+      <label for="device">Operating System:</label>
+      <select id="os" name="os" required>
+        <option value="Windows">Windows</option>
+        <option value="macOS">macOS</option>
+        <option value="Linux">Linux</option>
+        <option value="Other">Other</option>
+      </select>
     </form>
   </body>
 </html>
