--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Lilita+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <title>Lucas Waunn - Project 1</title>
   </head>
   <body>
@@ -21,11 +20,11 @@
     </p>
     <form class="form" onsubmit="event.preventDefault(); window.location.reload();"> 
       <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
+      <input type="text" id="name" name="name" required>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+      <input type="email" id="email" name="email" required>
       <label for="phone">Phone:</label>
-      <input type="tel" id="phone" name="phone" required />
+      <input type="tel" id="phone" name="phone" required>
       <label for="device">Device:</label>
       <select id="device" name="device" onchange="updateOSOptions()" required>
         <option value="">Select Device</option>
@@ -36,10 +35,10 @@
       </select>
       <label for="device">Operating System:</label>
       <select id="os" name="os" required>
-        <option value="">Select a Device</option>"
+        <option value="">Select a Device</option>
       </select>
 
-      <input class="button" type="submit" value="Submit"/>
+      <input class="button" type="submit" value="Submit">
     </form>
   </body>
 </html>
